force-app/main/default/objects/Partner_Business_Management__c/Partner_Business_Management__c.object-meta.xml
<CustomObject>
    <label>Partner Business Management</label>
    <nameField>
        <displayFormat>B-{yy}{mm}{dd}{000}</displayFormat>
        <label>Business Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Business Managements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>