force-app/main/default/objects/Partner_Business_Management__c/fields/Business_Period__c.field-meta.xml
<CustomField>
    <fullName>Business_Period__c</fullName>
    <label>Business Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>