force-app/main/default/objects/Partner_Business_Management__c/fields/Contract_No__c.field-meta.xml
<CustomField>
    <fullName>Contract_No__c</fullName>
    <label>Contract No</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>