force-app/main/default/objects/Partner_Business_Management__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AE</fullName>
                <label>United Arab Emirates</label>
            </value>
            <value>
                <fullName>AR</fullName>
                <label>Argentina</label>
            </value>
            <value>
                <fullName>AT</fullName>
                <label>Austria</label>
            </value>
            <value>
                <fullName>AU</fullName>
                <label>Australia</label>
            </value>
            <value>
                <fullName>AW</fullName>
                <label>Aruba</label>
            </value>
            <value>
                <fullName>AZ</fullName>
                <label>Azerbaijan</label>
            </value>
            <value>
                <fullName>BD</fullName>
                <label>Bangladesh</label>
            </value>
            <value>
                <fullName>BE</fullName>
                <label>Belgium</label>
            </value>
            <value>
                <fullName>BG</fullName>
                <label>Bulgaria</label>
            </value>
            <value>
                <fullName>BO</fullName>
                <label>Bolivia</label>
            </value>
            <value>
                <fullName>BR</fullName>
                <label>Brazil</label>
            </value>
            <value>
                <fullName>BY</fullName>
                <label>Belarus</label>
            </value>
            <value>
                <fullName>CA</fullName>
                <label>Canada</label>
            </value>
            <value>
                <fullName>CH</fullName>
                <label>Switzerland</label>
            </value>
            <value>
                <fullName>CL</fullName>
                <label>Chile</label>
            </value>
            <value>
                <fullName>CN</fullName>
                <label>China</label>
            </value>
            <value>
                <fullName>CO</fullName>
                <label>Colombia</label>
            </value>
            <value>
                <fullName>CR</fullName>
                <label>CostaRica</label>
            </value>
            <value>
                <fullName>CS</fullName>
                <label>Serbia and Montenegro</label>
            </value>
            <value>
                <fullName>CW</fullName>
                <label>Curaçao</label>
            </value>
            <value>
                <fullName>CY</fullName>
                <label>Cyprus</label>
            </value>
            <value>
                <fullName>CZ</fullName>
                <label>Czech Republic</label>
            </value>
            <value>
                <fullName>DE</fullName>
                <label>Germany</label>
            </value>
            <value>
                <fullName>DK</fullName>
                <label>Denmark</label>
            </value>
            <value>
                <fullName>DM</fullName>
                <label>Dominica</label>
            </value>
            <value>
                <fullName>DO</fullName>
                <label>Dominican Republic</label>
            </value>
            <value>
                <fullName>DZ</fullName>
                <label>Algeria</label>
            </value>
            <value>
                <fullName>EC</fullName>
                <label>Ecuador</label>
            </value>
            <value>
                <fullName>EG</fullName>
                <label>Egypt</label>
            </value>
            <value>
                <fullName>ES</fullName>
                <label>Spain</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>