force-app/main/default/objects/Partner_Business_Management__c/fields/Discount_Rate__c.field-meta.xml
<CustomField>
    <fullName>Discount_Rate__c</fullName>
    <label>Discount Rate</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>