force-app/main/default/objects/Partner_Business_Management__c/fields/mBizTypeL1Code__c.field-meta.xml
<CustomField>
    <fullName>mBizTypeL1Code__c</fullName>
    <label>Type of Business L1</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>L100</fullName>
                <label>The Public</label>
            </value>
            <value>
                <fullName>L200</fullName>
                <label>Finance</label>
            </value>
            <value>
                <fullName>L300</fullName>
                <label>Service</label>
            </value>
            <value>
                <fullName>L400</fullName>
                <label>Manufacturing(Discrete)</label>
            </value>
            <value>
                <fullName>L500</fullName>
                <label>Manufacturing(Process)</label>
            </value>
            <value>
                <fullName>L600</fullName>
                <label>Manufacturing(CPG)</label>
            </value>
            <value>
                <fullName>L700</fullName>
                <label>Logistics</label>
            </value>
            <value>
                <fullName>L800</fullName>
                <label>Other</label>
            </value>
            <value>
                <fullName>콘도미니</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>