force-app/main/default/objects/Partner_Business_Management__c/fields/mBizTypeL2Code__c.field-meta.xml
<CustomField>
    <fullName>mBizTypeL2Code__c</fullName>
    <label>Type of Business L2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>mBizTypeL1Code__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>L101</fullName>
                <label>Central organization</label>
            </value>
            <value>
                <fullName>L102</fullName>
                <label>Local government</label>
            </value>
            <value>
                <fullName>L103</fullName>
                <label>Public Institution/Public Enterprise</label>
            </value>
            <value>
                <fullName>L104</fullName>
                <label>National defense</label>
            </value>
            <value>
                <fullName>L201</fullName>
                <label>Financial holding company</label>
            </value>
            <value>
                <fullName>L202</fullName>
                <label>Bank</label>
            </value>
            <value>
                <fullName>L203</fullName>
                <label>Property insurance</label>
            </value>
            <value>
                <fullName>L204</fullName>
                <label>Life insurance</label>
            </value>
            <value>
                <fullName>L205</fullName>
                <label>Crcard</label>
            </value>
            <value>
                <fullName>L206</fullName>
                <label>Securities</label>
            </value>
            <value>
                <fullName>L207</fullName>
                <label>Fin-Tech</label>
            </value>
            <value>
                <fullName>L208</fullName>
                <label>Other (Capital, Asset Management, Investment advisory)</label>
            </value>
            <value>
                <fullName>L301</fullName>
                <label>IT Services</label>
            </value>
            <value>
                <fullName>L302</fullName>
                <label>Information/Communication</label>
            </value>
            <value>
                <fullName>L303</fullName>
                <label>Broadcasting/Media</label>
            </value>
            <value>
                <fullName>L304</fullName>
                <label>Distribution/Wholesale/Retail</label>
            </value>
            <value>
                <fullName>L305</fullName>
                <label>Online Distribution</label>
            </value>
            <value>
                <fullName>L306</fullName>
                <label>Other specialty services</label>
            </value>
            <value>
                <fullName>L307</fullName>
                <label>Business outsourcing</label>
            </value>
            <value>
                <fullName>L308</fullName>
                <label>Hotel/Leisure</label>
            </value>
            <value>
                <fullName>L309</fullName>
                <label>Restaurant Business(Catering, Dining, Franchise)</label>
            </value>
            <value>
                <fullName>L310</fullName>
                <label>Entertainment</label>
            </value>
            <value>
                <fullName>L311</fullName>
                <label>Medical/Healthcare</label>
            </value>
            <value>
                <fullName>L312</fullName>
                <label>Social welfare</label>
            </value>
            <value>
                <fullName>L313</fullName>
                <label>Real-estate</label>
            </value>
            <value>
                <fullName>L314</fullName>
                <label>Lease/Rental</label>
            </value>
            <value>
                <fullName>L315</fullName>
                <label>Education</label>
            </value>
            <value>
                <fullName>L316</fullName>
                <label>Publication/Printing</label>
            </value>
            <value>
                <fullName>L317</fullName>
                <label>Traffic/Transportation</label>
            </value>
            <value>
                <fullName>L401</fullName>
                <label>High Tech</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>