force-app/main/default/objects/Partner_Business_Management__c/fields/Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Partner Account</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Account.Partner_Type__c</field>
            <operation>equals</operation>
            <value>Reseller</value>
        </filterItems>
        <filterItems>
            <field>Account.Partner_Type__c</field>
            <operation>equals</operation>
            <value>Managed Service Provider</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partner Business Managements</relationshipLabel>
    <relationshipName>Partner_Business_Opportunities</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>