force-app/main/default/objects/Partner_Business_Management__c/fields/Partner_Sales__c.field-meta.xml
<CustomField>
    <fullName>Partner_Sales__c</fullName>
    <label>Partner Sales</label>
    <length>255</length>
    <type>Text</type>
</CustomField>