force-app/main/default/objects/Partner_Business_Management__c/fields/Partner_Sales_Email__c.field-meta.xml
<CustomField>
    <fullName>Partner_Sales_Email__c</fullName>
    <label>Partner Sales Email</label>
    <type>Email</type>
</CustomField>