force-app/main/default/objects/Partner_Business_Management__c/fields/Partner_Sales_H_P__c.field-meta.xml
<CustomField>
    <fullName>Partner_Sales_H_P__c</fullName>
    <label>Partner Sales H.P</label>
    <type>Phone</type>
</CustomField>