force-app/main/default/objects/Partner_Business_Management__c/fields/Request_For_SDS__c.field-meta.xml
<CustomField>
    <fullName>Request_For_SDS__c</fullName>
    <label>Request For SDS</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>