force-app/main/default/objects/Partner_Business_Management__c/fields/Scheduled_Service_Opening_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Service_Opening_Date__c</fullName>
    <label>Scheduled Service Opening Date</label>
    <type>Date</type>
</CustomField>