force-app/main/default/objects/Partner_Business_Management__c/fields/SDS_AM__c.field-meta.xml
<CustomField>
    <fullName>SDS_AM__c</fullName>
    <label>SDS AM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>