force-app/main/default/objects/Partner_Business_Management__c/fields/SDS_AM_Email__c.field-meta.xml
<CustomField>
    <fullName>SDS_AM_Email__c</fullName>
    <label>SDS AM Email</label>
    <type>Email</type>
</CustomField>