force-app/main/default/objects/Partner_Business_Management__c/fields/SDS_PDM__c.field-meta.xml
<CustomField>
    <fullName>SDS_PDM__c</fullName>
    <defaultValue>$User.LastName + &quot; &quot; + $User.FirstName</defaultValue>
    <label>SDS PDM</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>