force-app/main/default/objects/Partner_Business_Management__c/fields/SDS_PDM_Email__c.field-meta.xml
<CustomField>
    <fullName>SDS_PDM_Email__c</fullName>
    <defaultValue>$User.Email</defaultValue>
    <label>SDS PDM Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>