force-app/main/default/objects/Partner_Business_Management__c/fields/SDS_PDM_H_P__c.field-meta.xml
<CustomField>
    <fullName>SDS_PDM_H_P__c</fullName>
    <label>SDS PDM H.P</label>
    <type>Phone</type>
</CustomField>