force-app/main/default/objects/Partner_Business_Management__c/fields/SDS_Sales__c.field-meta.xml
<CustomField>
    <fullName>SDS_Sales__c</fullName>
    <label>SDS Sales</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>