force-app/main/default/objects/Partner_Business_Management__c/fields/SDS_Sales_Email__c.field-meta.xml
<CustomField>
    <fullName>SDS_Sales_Email__c</fullName>
    <label>SDS Sales Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>