force-app/main/default/objects/Partner_Business_Management__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Identification(I)</fullName>
                <default>true</default>
                <label>Identification(I)</label>
            </value>
            <value>
                <fullName>Value Proposition(V)</fullName>
            </value>
            <value>
                <fullName>RFP Announcement(R)</fullName>
            </value>
            <value>
                <fullName>Proposal Submitted(S)</fullName>
            </value>
            <value>
                <fullName>Closed Won(W)</fullName>
            </value>
            <value>
                <fullName>Closed Lost(F)</fullName>
            </value>
            <value>
                <fullName>Identification</fullName>
                <isActive>false</isActive>
                <label>Identification</label>
            </value>
            <value>
                <fullName>RFP Announcement®</fullName>
                <isActive>false</isActive>
                <label>RFP Announcement®</label>
            </value>
            <value>
                <fullName>Value Proposition</fullName>
                <isActive>false</isActive>
                <label>Value Proposition</label>
            </value>
            <value>
                <fullName>제안 제출(Submitted)</fullName>
                <isActive>false</isActive>
                <label>제안 제출(Submitted)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>