force-app/main/default/objects/Partner_Business_Management__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Temporary(T)</fullName>
            </value>
            <value>
                <fullName>Submitted(S)</fullName>
            </value>
            <value>
                <fullName>Reviewing(R)</fullName>
            </value>
            <value>
                <fullName>Approved(A)</fullName>
            </value>
            <value>
                <fullName>Rejected(V)</fullName>
            </value>
            <value>
                <fullName>Closed(C)</fullName>
            </value>
            <value>
                <fullName>Rejected(R)</fullName>
                <isActive>false</isActive>
                <label>Rejected(R)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>