force-app/main/default/objects/Partner_Business_Management__c/recordTypes/MSP_Admin.recordType-meta.xml
<RecordType>
    <fullName>MSP_Admin</fullName>
    <active>true</active>
    <description>This record type is used for MSP Admin and Partner Mangers view.</description>
    <label>MSP Admin</label>
</RecordType>