force-app/main/default/objects/Partner_Business_Management__c/recordTypes/Partner_User.recordType-meta.xml
<RecordType>
    <fullName>Partner_User</fullName>
    <active>true</active>
    <description>This record type is used for partner user view.</description>
    <label>Partner User</label>
</RecordType>