force-app/main/default/objects/Partner_Business_Management__c/recordTypes/Partner_User_Read_only.recordType-meta.xml
<RecordType>
    <fullName>Partner_User_Read_only</fullName>
    <active>true</active>
    <description>This record type is used for MSP partner users after saving record with status= Submitted so that the record becomes read only.</description>
    <label>Partner User(Read only)</label>
</RecordType>