force-app/main/default/objects/Partner_Business_Management__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Project_Name__c</columns>
    <columns>Discount_Rate__c</columns>
    <columns>Contract_No__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Amount__c</columns>
    <columns>Business_Period__c</columns>
    <columns>Scheduled_Service_Opening_Date__c</columns>
    <columns>Partner_Account__c</columns>
    <columns>Partner_Sales__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>